fixed small error in styling ellipsis overflow

--- a/public/stylesheets/shared/tripFolders.css
+++ b/public/stylesheets/shared/tripFolders.css
@@ -484,3 +484,7 @@
   background-color: var(--app-secondary-text-color);
   border-radius: 2rem;
 }
+
+.file-author-name {
+  width: 8rem;
+}
